--- a/pebble/appinfo.json
+++ b/pebble/appinfo.json
@@ -1,47 +1,23 @@
 {
-    "appKeys": {},
+    "appKeys": {
+        "message": 1,
+        "status": 0
+    },
     "capabilities": [
         ""
     ],
     "companyName": "n.samarin.s@gmail.com",
-    "longName": "Test",
-    "projectType": "pebblejs",
+    "enableMultiJS": true,
+    "longName": "PebbleC",
+    "projectType": "native",
     "resources": {
-        "media": [
-            {
-                "file": "images/menu_icon.png",
-                "menuIcon": true,
-                "name": "IMAGE_MENU_ICON",
-                "type": "bitmap"
-            },
-            {
-                "file": "images/logo_splash.png",
-                "name": "IMAGE_LOGO_SPLASH",
-                "type": "bitmap"
-            },
-            {
-                "file": "images/tile_splash.png",
-                "name": "IMAGE_TILE_SPLASH",
-                "type": "bitmap"
-            },
-            {
-                "file": "fonts/UbuntuMono-Regular.ttf",
-                "name": "MONO_FONT_14",
-                "type": "font"
-            }
-        ]
+        "media": []
     },
     "sdkVersion": "3",
-    "shortName": "Test",
-    "targetPlatforms": [
-        "aplite",
-        "basalt"
-    ],
-    "uuid": "1a2662cb-9c88-4801-86c9-037711c39275",
-    "versionCode": 1,
+    "shortName": "PebbleC",
+    "uuid": "3af7c81c-cc68-4fc8-b483-f5efdda2efb8",
     "versionLabel": "1.0",
     "watchapp": {
-        "hiddenApp": false,
         "watchface": false
     }
 }
